--- a/tucans-plantmatica/styles/Menu.module.css
+++ b/tucans-plantmatica/styles/Menu.module.css
@@ -149,3 +149,14 @@
 
 /* Para cel jjj */
 
+@media screen and (max-width: 600px) {
+    
+    .dropbtn{
+    font-size: 10px;
+    transform: translate(-30px, 0);
+    }
+
+    .head{
+        height: 75px;
+    }
+}
