--- a/tucans-plantmatica/styles/Menu.module.css
+++ b/tucans-plantmatica/styles/Menu.module.css
@@ -152,8 +152,9 @@
 @media screen and (max-width: 600px) {
     
     .dropbtn{
-    font-size: 10px;
+    font-size: 12px;
     transform: translate(-50px, 0);
+    padding: 8px;
     }
 
     .dropdownContent{
