--- a/tucans-plantmatica/styles/Promotor.module.css
+++ b/tucans-plantmatica/styles/Promotor.module.css
@@ -30,7 +30,7 @@
     
     padding: 2.5vh;
     border-radius: 10px;
-    background-color: rgba(150, 150, 150, 0.3);
+    background-color: rgba(180, 180, 180, 0.3);
     text-align: center;
     transition: 0.3s;
     
@@ -85,6 +85,33 @@
     
     }
 
+    .direccion{
+        width:16%;
+        height: auto;
+        margin-left: 5px;
+        margin-right: 5px;
+        margin-top: 30px;
+        margin-bottom:15px;
+        transition: 0.3s;
+        border: 0;
+        font-size: 18px;
+        background-color: rgba(150, 150, 150, 0.0);
+        outline: none;
+        border-bottom: 3px solid var(--main-color);
+        border-radius: 4px 4px 0 0;
+    }
+
+    .direccion:hover{
+        background-color: rgba(150, 150, 150, 0.2);
+    }
+
+    .direccion:focus{
+        background-color: rgba(255,255,255,0.5); 
+    
+    }
+
+    
+
     .mini_input{
         width: 75%;
         height: auto;
@@ -124,13 +151,13 @@
 
 /* contenedor de la sucursal */
 
-.sucursal{
+.fichero{
     width: 100%;
     display: flex;
     justify-content: space-between;
 }
 
-.fichaSucursal{
+.ficha{
     background-color: white;
     width: 47.5%;
     padding: 1%;
@@ -138,7 +165,6 @@
     transition: 0.3s ease-in-out;
     display: flex;
     justify-content: space-between;
-
 }
 
 .btnEdit{
@@ -185,6 +211,7 @@
 
 }
 */
+
 
 .btnMenu {
     border-top: 0;
@@ -276,7 +303,7 @@
         display: inline-block;
     }
 
-    .fichaSucursal{
+    .fichaProductos{
         margin-bottom: 25px;
         width: 100%;
 
