sucursales, productos y menú adaptable

--- a/tucans-plantmatica/styles/Promotor.module.css
+++ b/tucans-plantmatica/styles/Promotor.module.css
@@ -299,11 +299,11 @@
         width: 50%;
     }
     
-    .sucursal{
+    .fichero{
         display: inline-block;
     }
 
-    .fichaProductos{
+    .ficha{
         margin-bottom: 25px;
         width: 100%;
 
