--- a/tucans-plantmatica/styles/Promotor.module.css
+++ b/tucans-plantmatica/styles/Promotor.module.css
@@ -172,6 +172,12 @@
     justify-content: space-between;
 }
 
+.fichaImagen{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .btnEdit {
     background-color: white;
     border: none;
