--- a/tucans-plantmatica/styles/Promotor.module.css
+++ b/tucans-plantmatica/styles/Promotor.module.css
@@ -183,7 +183,7 @@
 }
 
 .nombreProducto{
-    transform: translate(-100%,0);
+    transform: translate(-25%,0);
 }
 
 .btnEdit {
@@ -317,6 +317,50 @@
     width: 100%;
 }
 
+/* Comentario */
+.comtainer{
+display: flex;
+justify-content: space-between;
+flex-wrap: wrap;
+}
+
+.comentarioRender{
+    width: 47%;
+    background-color: rgb(222,222,222);
+    margin-top: 20px;
+    border-radius:5px;
+    padding: 20px;
+    transition: 0.3s;
+}
+    
+    .comentarioRender:hover{
+        background-color: white;
+        box-shadow: 2px 2px 3px rgb(150, 150, 150);
+    }
+
+    .comentarioRender h2{
+        margin:0;
+    }
+
+.inputComentario{
+    border:none;
+    width: 70%;
+    font-size: 18px;
+    border-bottom: 3px solid var(--main-color);
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-right: 20px;
+    background-color: rgb(240, 240, 240);
+    outline: none;
+    border-radius: 4px 4px 0 0;
+    transition: 0.2s;
+}
+
+.inputComentario:hover {
+    background-color: white;
+    
+}
+
 @media screen and (max-width: 600px) {
 
     .input,
@@ -350,6 +394,15 @@
 
     .nombreProducto{
         transform: translate(-5%,0);
+    }
+
+    /*Comentario*/
+    .comtainer{
+        display: inline-block;
+    }
+
+    .comentarioRender{
+        width: 100%;
     }
 
 }
